tests/e2e/mutation_any_invalid6.story
a = {} as Map[any,any]
b = a[0]
c = b.length(arg:1)
